// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicRendering ManagementToolbar with results bar renders a ManagementToolbar with filterLabels 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-primary navbar-nowrap"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav navbar-nav-expand"
      >
        <li
          class="nav-item"
        >
          <div
            class="custom-control custom-checkbox"
          >
            <label>
              <input
                checked=""
                class="custom-control-input"
                title="Select Items"
                type="checkbox"
                value="true"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <span
            class="navbar-text"
          >
            0 of 10
             
            <span
              class="navbar-breakpoint-down-d-none"
            >
              Selected
            </span>
          </span>
        </li>
      </ul>
      <ul
        class="navbar-nav"
      />
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          href="#pageTitle"
          title="Remove"
        >
          <svg
            class="lexicon-icon lexicon-icon-trash"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#trash"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          disabled=""
          href="#pageTitle"
          title="Download"
        >
          <svg
            class="lexicon-icon lexicon-icon-download"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#download"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <button
          class="nav-link nav-link-monospaced btn btn-unstyled"
          disabled=""
          title="Change"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-change"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#change"
            />
          </svg>
        </button>
      </li>
      <li
        class="nav-item"
      >
        <div
          class="dropdown"
        >
          <button
            class="dropdown-toggle nav-link nav-link-monospaced btn btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-ellipsis-v"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#ellipsis-v"
              />
            </svg>
          </button>
        </div>
      </li>
    </div>
  </nav>
  <nav
    class="tbar tbar-inline-xs-down subnav-tbar subnav-tbar-primary"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="tbar-nav tbar-nav-wrap"
      >
        <li
          class="tbar-item"
        >
          <div
            class="tbar-section"
          >
            <span
              class="component-text text-truncate-inline"
            >
              <span
                class="text-truncate"
              >
                10 results for
              </span>
            </span>
          </div>
        </li>
        <li
          class="tbar-item"
        >
          <div
            class="tbar-section"
          >
            <span
              class="label component-label tbar-label label-dismissible label-unstyled"
            >
              <span
                class="label-item label-item-expand"
              >
                Filter 1
              </span>
              <span
                class="label-item label-item-after"
              >
                <button
                  class="close"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times"
                    role="presentation"
                  >
                    <use
                      xlink:href="icons.svg#times"
                    />
                  </svg>
                </button>
              </span>
            </span>
          </div>
        </li>
        <li
          class="tbar-item tbar-item-expand"
        >
          <div
            class="tbar-section"
          >
            <span
              class="label component-label tbar-label label-dismissible label-unstyled"
            >
              <span
                class="label-item label-item-expand"
              >
                Gamer
              </span>
              <span
                class="label-item label-item-after"
              >
                <button
                  class="close"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times"
                    role="presentation"
                  >
                    <use
                      xlink:href="icons.svg#times"
                    />
                  </svg>
                </button>
              </span>
            </span>
          </div>
        </li>
        <li
          class="tbar-item"
        >
          <div
            class="tbar-section"
          >
            <button
              class="component-link tbar-link btn btn-unstyled"
              type="button"
            >
              Clear
            </button>
          </div>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering ManagementToolbar with results bar renders a ManagementToolbar with results for \`foo\` 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-primary navbar-nowrap"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav navbar-nav-expand"
      >
        <li
          class="nav-item"
        >
          <div
            class="custom-control custom-checkbox"
          >
            <label>
              <input
                checked=""
                class="custom-control-input"
                title="Select Items"
                type="checkbox"
                value="true"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <span
            class="navbar-text"
          >
            0 of 10
             
            <span
              class="navbar-breakpoint-down-d-none"
            >
              Selected
            </span>
          </span>
        </li>
      </ul>
      <ul
        class="navbar-nav"
      />
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          href="#pageTitle"
          title="Remove"
        >
          <svg
            class="lexicon-icon lexicon-icon-trash"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#trash"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          disabled=""
          href="#pageTitle"
          title="Download"
        >
          <svg
            class="lexicon-icon lexicon-icon-download"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#download"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <button
          class="nav-link nav-link-monospaced btn btn-unstyled"
          disabled=""
          title="Change"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-change"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#change"
            />
          </svg>
        </button>
      </li>
      <li
        class="nav-item"
      >
        <div
          class="dropdown"
        >
          <button
            class="dropdown-toggle nav-link nav-link-monospaced btn btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-ellipsis-v"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#ellipsis-v"
              />
            </svg>
          </button>
        </div>
      </li>
    </div>
  </nav>
  <nav
    class="tbar tbar-inline-xs-down subnav-tbar subnav-tbar-primary"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="tbar-nav tbar-nav-wrap"
      >
        <li
          class="tbar-item"
        >
          <div
            class="tbar-section"
          >
            <span
              class="component-text text-truncate-inline"
            >
              <span
                class="text-truncate"
              >
                10 results for
                 "
                <strong>
                  foo
                </strong>
                "
              </span>
            </span>
          </div>
        </li>
        <li
          class="tbar-item"
        >
          <div
            class="tbar-section"
          >
            <span
              class="label component-label tbar-label label-dismissible label-unstyled"
            >
              <span
                class="label-item label-item-expand"
              >
                Filter 1
              </span>
              <span
                class="label-item label-item-after"
              >
                <button
                  class="close"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times"
                    role="presentation"
                  >
                    <use
                      xlink:href="icons.svg#times"
                    />
                  </svg>
                </button>
              </span>
            </span>
          </div>
        </li>
        <li
          class="tbar-item tbar-item-expand"
        >
          <div
            class="tbar-section"
          >
            <span
              class="label component-label tbar-label label-dismissible label-unstyled"
            >
              <span
                class="label-item label-item-expand"
              >
                Gamer
              </span>
              <span
                class="label-item label-item-after"
              >
                <button
                  class="close"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times"
                    role="presentation"
                  >
                    <use
                      xlink:href="icons.svg#times"
                    />
                  </svg>
                </button>
              </span>
            </span>
          </div>
        </li>
        <li
          class="tbar-item"
        >
          <div
            class="tbar-section"
          >
            <button
              class="component-link tbar-link btn btn-unstyled"
              type="button"
            >
              Clear
            </button>
          </div>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering active state renders a ManagementToolbar 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-primary navbar-nowrap"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav navbar-nav-expand"
      >
        <li
          class="nav-item"
        >
          <div
            class="custom-control custom-checkbox"
          >
            <label>
              <input
                checked=""
                class="custom-control-input"
                title="Select Items"
                type="checkbox"
                value="true"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <span
            class="navbar-text"
          >
            All Selected
          </span>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering active state renders a ManagementToolbar with actions 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-primary navbar-nowrap"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav navbar-nav-expand"
      >
        <li
          class="nav-item"
        >
          <div
            class="custom-control custom-checkbox"
          >
            <label>
              <input
                checked=""
                class="custom-control-input"
                title="Select Items"
                type="checkbox"
                value="true"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <span
            class="navbar-text"
          >
            All Selected
          </span>
        </li>
      </ul>
      <ul
        class="navbar-nav"
      />
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          href="#pageTitle"
          title="Remove"
        >
          <svg
            class="lexicon-icon lexicon-icon-trash"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#trash"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          disabled=""
          href="#pageTitle"
          title="Download"
        >
          <svg
            class="lexicon-icon lexicon-icon-download"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#download"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <button
          class="nav-link nav-link-monospaced btn btn-unstyled"
          disabled=""
          title="Change"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-change"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#change"
            />
          </svg>
        </button>
      </li>
      <li
        class="nav-item"
      >
        <div
          class="dropdown"
        >
          <button
            class="dropdown-toggle nav-link nav-link-monospaced btn btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-ellipsis-v"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#ellipsis-v"
              />
            </svg>
          </button>
        </div>
      </li>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering active state renders a ManagementToolbar with active state disabled 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-primary navbar-nowrap"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav navbar-nav-expand"
      >
        <li
          class="nav-item"
        >
          <div
            class="custom-control custom-checkbox"
          >
            <label>
              <input
                checked=""
                class="custom-control-input"
                disabled=""
                title="Select Items"
                type="checkbox"
                value="true"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <span
            class="navbar-text"
          >
            5 of 10
             
            <span
              class="navbar-breakpoint-down-d-none"
            >
              Selected
            </span>
          </span>
        </li>
        <li
          class="nav-item nav-item-shrink"
        >
          <button
            class="nav-link btn btn-unstyled"
            disabled=""
            type="button"
          >
            <span
              class="text-truncate-inline"
            >
              <span
                class="text-truncate"
              >
                Clear
              </span>
            </span>
          </button>
        </li>
        <li
          class="nav-item nav-item-shrink"
        >
          <button
            class="nav-link btn btn-unstyled"
            disabled=""
            type="button"
          >
            <span
              class="text-truncate-inline"
            >
              <span
                class="text-truncate"
              >
                Select all
              </span>
            </span>
          </button>
        </li>
      </ul>
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <button
            class="nav-link nav-link-monospaced btn btn-unstyled"
            disabled=""
            title="Info"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-info-circle-open"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#info-circle-open"
              />
            </svg>
          </button>
        </li>
      </ul>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          href="#pageTitle"
          title="Remove"
        >
          <svg
            class="lexicon-icon lexicon-icon-trash"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#trash"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          disabled=""
          href="#pageTitle"
          title="Download"
        >
          <svg
            class="lexicon-icon lexicon-icon-download"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#download"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <button
          class="nav-link nav-link-monospaced btn btn-unstyled"
          disabled=""
          title="Change"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-change"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#change"
            />
          </svg>
        </button>
      </li>
      <li
        class="nav-item"
      >
        <div
          class="dropdown"
        >
          <button
            class="dropdown-toggle nav-link nav-link-monospaced btn btn-unstyled"
            disabled=""
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-ellipsis-v"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#ellipsis-v"
              />
            </svg>
          </button>
        </div>
      </li>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering active state renders a ManagementToolbar with all selected 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-primary navbar-nowrap"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav navbar-nav-expand"
      >
        <li
          class="nav-item"
        >
          <div
            class="custom-control custom-checkbox"
          >
            <label>
              <input
                checked=""
                class="custom-control-input"
                title="Select Items"
                type="checkbox"
                value="true"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <span
            class="navbar-text"
          >
            All Selected
          </span>
        </li>
      </ul>
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <button
            class="nav-link nav-link-monospaced btn btn-unstyled"
            title="Info"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-info-circle-open"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#info-circle-open"
              />
            </svg>
          </button>
        </li>
      </ul>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          href="#pageTitle"
          title="Remove"
        >
          <svg
            class="lexicon-icon lexicon-icon-trash"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#trash"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          disabled=""
          href="#pageTitle"
          title="Download"
        >
          <svg
            class="lexicon-icon lexicon-icon-download"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#download"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <button
          class="nav-link nav-link-monospaced btn btn-unstyled"
          disabled=""
          title="Change"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-change"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#change"
            />
          </svg>
        </button>
      </li>
      <li
        class="nav-item"
      >
        <div
          class="dropdown"
        >
          <button
            class="dropdown-toggle nav-link nav-link-monospaced btn btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-ellipsis-v"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#ellipsis-v"
              />
            </svg>
          </button>
        </div>
      </li>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering active state renders a ManagementToolbar with bulk actions 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-primary navbar-nowrap"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav navbar-nav-expand"
      >
        <li
          class="nav-item"
        >
          <div
            class="custom-control custom-checkbox"
          >
            <label>
              <input
                checked=""
                class="custom-control-input"
                title="Select Items"
                type="checkbox"
                value="true"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <span
            class="navbar-text"
          >
            5 of 10
             
            <span
              class="navbar-breakpoint-down-d-none"
            >
              Selected
            </span>
          </span>
        </li>
        <li
          class="nav-item nav-item-shrink"
        >
          <button
            class="nav-link btn btn-unstyled"
            type="button"
          >
            <span
              class="text-truncate-inline"
            >
              <span
                class="text-truncate"
              >
                Clear
              </span>
            </span>
          </button>
        </li>
      </ul>
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <button
            class="nav-link nav-link-monospaced btn btn-unstyled"
            title="Info"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-info-circle-open"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#info-circle-open"
              />
            </svg>
          </button>
        </li>
      </ul>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          href="#pageTitle"
          title="Remove"
        >
          <svg
            class="lexicon-icon lexicon-icon-trash"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#trash"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          disabled=""
          href="#pageTitle"
          title="Download"
        >
          <svg
            class="lexicon-icon lexicon-icon-download"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#download"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <button
          class="nav-link nav-link-monospaced btn btn-unstyled"
          disabled=""
          title="Change"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-change"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#change"
            />
          </svg>
        </button>
      </li>
      <li
        class="nav-item"
      >
        <div
          class="dropdown"
        >
          <button
            class="dropdown-toggle nav-link nav-link-monospaced btn btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-ellipsis-v"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#ellipsis-v"
              />
            </svg>
          </button>
        </div>
      </li>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering active state renders a ManagementToolbar with info button 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-primary navbar-nowrap"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav navbar-nav-expand"
      >
        <li
          class="nav-item"
        >
          <div
            class="custom-control custom-checkbox"
          >
            <label>
              <input
                checked=""
                class="custom-control-input"
                title="Select Items"
                type="checkbox"
                value="true"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <span
            class="navbar-text"
          >
            All Selected
          </span>
        </li>
      </ul>
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <button
            class="nav-link nav-link-monospaced btn btn-unstyled"
            title="Info"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-info-circle-open"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#info-circle-open"
              />
            </svg>
          </button>
        </li>
      </ul>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          href="#pageTitle"
          title="Remove"
        >
          <svg
            class="lexicon-icon lexicon-icon-trash"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#trash"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          disabled=""
          href="#pageTitle"
          title="Download"
        >
          <svg
            class="lexicon-icon lexicon-icon-download"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#download"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <button
          class="nav-link nav-link-monospaced btn btn-unstyled"
          disabled=""
          title="Change"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-change"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#change"
            />
          </svg>
        </button>
      </li>
      <li
        class="nav-item"
      >
        <div
          class="dropdown"
        >
          <button
            class="dropdown-toggle nav-link nav-link-monospaced btn btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-ellipsis-v"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#ellipsis-v"
              />
            </svg>
          </button>
        </div>
      </li>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering active state renders a ManagementToolbar with select all button 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-primary navbar-nowrap"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav navbar-nav-expand"
      >
        <li
          class="nav-item"
        >
          <div
            class="custom-control custom-checkbox"
          >
            <label>
              <input
                checked=""
                class="custom-control-input"
                title="Select Items"
                type="checkbox"
                value="true"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <span
            class="navbar-text"
          >
            5 of 10
             
            <span
              class="navbar-breakpoint-down-d-none"
            >
              Selected
            </span>
          </span>
        </li>
        <li
          class="nav-item nav-item-shrink"
        >
          <button
            class="nav-link btn btn-unstyled"
            type="button"
          >
            <span
              class="text-truncate-inline"
            >
              <span
                class="text-truncate"
              >
                Clear
              </span>
            </span>
          </button>
        </li>
        <li
          class="nav-item nav-item-shrink"
        >
          <button
            class="nav-link btn btn-unstyled"
            type="button"
          >
            <span
              class="text-truncate-inline"
            >
              <span
                class="text-truncate"
              >
                Select all
              </span>
            </span>
          </button>
        </li>
      </ul>
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <button
            class="nav-link nav-link-monospaced btn btn-unstyled"
            title="Info"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-info-circle-open"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#info-circle-open"
              />
            </svg>
          </button>
        </li>
      </ul>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          href="#pageTitle"
          title="Remove"
        >
          <svg
            class="lexicon-icon lexicon-icon-trash"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#trash"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          disabled=""
          href="#pageTitle"
          title="Download"
        >
          <svg
            class="lexicon-icon lexicon-icon-download"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#download"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <button
          class="nav-link nav-link-monospaced btn btn-unstyled"
          disabled=""
          title="Change"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-change"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#change"
            />
          </svg>
        </button>
      </li>
      <li
        class="nav-item"
      >
        <div
          class="dropdown"
        >
          <button
            class="dropdown-toggle nav-link nav-link-monospaced btn btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-ellipsis-v"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#ellipsis-v"
              />
            </svg>
          </button>
        </div>
      </li>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering active state renders a ManagementToolbar with selected 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-primary navbar-nowrap"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav navbar-nav-expand"
      >
        <li
          class="nav-item"
        >
          <div
            class="custom-control custom-checkbox"
          >
            <label>
              <input
                checked=""
                class="custom-control-input"
                title="Select Items"
                type="checkbox"
                value="true"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <span
            class="navbar-text"
          >
            5 of 10
             
            <span
              class="navbar-breakpoint-down-d-none"
            >
              Selected
            </span>
          </span>
        </li>
      </ul>
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <button
            class="nav-link nav-link-monospaced btn btn-unstyled"
            title="Info"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-info-circle-open"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#info-circle-open"
              />
            </svg>
          </button>
        </li>
      </ul>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          href="#pageTitle"
          title="Remove"
        >
          <svg
            class="lexicon-icon lexicon-icon-trash"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#trash"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          disabled=""
          href="#pageTitle"
          title="Download"
        >
          <svg
            class="lexicon-icon lexicon-icon-download"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#download"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <button
          class="nav-link nav-link-monospaced btn btn-unstyled"
          disabled=""
          title="Change"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-change"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#change"
            />
          </svg>
        </button>
      </li>
      <li
        class="nav-item"
      >
        <div
          class="dropdown"
        >
          <button
            class="dropdown-toggle nav-link nav-link-monospaced btn btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-ellipsis-v"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#ellipsis-v"
              />
            </svg>
          </button>
        </div>
      </li>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering active state renders a ManagementToolbar with selected 2`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-primary navbar-nowrap"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav navbar-nav-expand"
      >
        <li
          class="nav-item"
        >
          <div
            class="custom-control custom-checkbox"
          >
            <label>
              <input
                checked=""
                class="custom-control-input"
                title="Select Items"
                type="checkbox"
                value="true"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <span
            class="navbar-text"
          >
            5 of 10
             
            <span
              class="navbar-breakpoint-down-d-none"
            >
              Selected
            </span>
          </span>
        </li>
      </ul>
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <button
            class="nav-link nav-link-monospaced btn btn-unstyled"
            title="Info"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-info-circle-open"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#info-circle-open"
              />
            </svg>
          </button>
        </li>
      </ul>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          href="#pageTitle"
          title="Remove"
        >
          <svg
            class="lexicon-icon lexicon-icon-trash"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#trash"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <a
          class="nav-link nav-link-monospaced"
          disabled=""
          href="#pageTitle"
          title="Download"
        >
          <svg
            class="lexicon-icon lexicon-icon-download"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#download"
            />
          </svg>
        </a>
      </li>
      <li
        class="nav-item navbar-breakpoint-down-d-none"
      >
        <button
          class="nav-link nav-link-monospaced btn btn-unstyled"
          disabled=""
          title="Change"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-change"
            role="presentation"
          >
            <use
              xlink:href="icons.svg#change"
            />
          </svg>
        </button>
      </li>
      <li
        class="nav-item"
      >
        <div
          class="dropdown"
        >
          <button
            class="dropdown-toggle nav-link nav-link-monospaced btn btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-ellipsis-v"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#ellipsis-v"
              />
            </svg>
          </button>
        </div>
      </li>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering renders 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav"
      />
      <ul
        class="navbar-nav"
      />
    </div>
  </nav>
</div>
`;

exports[`BasicRendering renders a ManagementToolbar with creation menu DropDown 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav"
      />
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <div
            class="dropdown"
          >
            <button
              class="dropdown-toggle nav-btn nav-btn-monospaced navbar-breakpoint-down-d-none btn btn-primary"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-plus"
                role="presentation"
              >
                <use
                  xlink:href="icons.svg#plus"
                />
              </svg>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering renders a ManagementToolbar with creation menu button 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav"
      />
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <button
            class="nav-btn nav-btn-monospaced navbar-breakpoint-down-d-none btn btn-monospaced btn-primary"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-plus"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#plus"
              />
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering renders a ManagementToolbar with creation menu link 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav"
      />
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <a
            class="nav-btn nav-btn-monospaced"
            href="https://clay.dev"
            title="Creation Menu"
          >
            <svg
              class="lexicon-icon lexicon-icon-plus"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#plus"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering renders a ManagementToolbar with disabled all 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <div
            class="custom-control custom-checkbox"
          >
            <label>
              <input
                checked=""
                class="custom-control-input"
                disabled=""
                type="checkbox"
                value="true"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </li>
        <div
          class="dropdown"
        >
          <button
            class="dropdown-toggle nav-link btn btn-unstyled"
            disabled=""
            type="button"
          >
            <span
              class="navbar-breakpoint-down-d-none"
            >
              <span
                class="navbar-text-truncate"
              >
                Filter and Order
              </span>
              <svg
                class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after"
                role="presentation"
              >
                <use
                  xlink:href="icons.svg#caret-bottom"
                />
              </svg>
            </span>
            <span
              class="navbar-breakpoint-d-none"
            >
              <svg
                class="lexicon-icon lexicon-icon-filter"
                role="presentation"
              >
                <use
                  xlink:href="icons.svg#filter"
                />
              </svg>
            </span>
          </button>
        </div>
        <li
          class="nav-item"
        >
          <button
            class="nav-link nav-link-monospaced order-arrow-up-active btn btn-unstyled"
            disabled=""
            title="Reverse Sort Direction"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-order-arrow"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#order-arrow"
              />
            </svg>
          </button>
        </li>
      </ul>
      <div
        class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <form
            method="get"
            role="search"
          >
            <div
              class="input-group"
            >
              <div
                class="input-group-item"
              >
                <input
                  aria-label="Search"
                  class="form-control input-group-inset input-group-inset-after"
                  disabled=""
                  type="text"
                  value=""
                />
                <span
                  class="input-group-inset-item input-group-inset-item-after"
                >
                  <button
                    class="navbar-breakpoint-d-none btn btn-monospaced btn-unstyled"
                    type="button"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-times"
                      role="presentation"
                    >
                      <use
                        xlink:href="icons.svg#times"
                      />
                    </svg>
                  </button>
                  <button
                    class="btn btn-monospaced btn-unstyled"
                    disabled=""
                    type="submit"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-search"
                      role="presentation"
                    >
                      <use
                        xlink:href="icons.svg#search"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item navbar-breakpoint-d-none"
        >
          <button
            class="nav-link nav-link-monospaced btn btn-unstyled"
            disabled=""
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-search"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#search"
              />
            </svg>
          </button>
        </li>
        <li
          class="nav-item"
        >
          <div
            class="dropdown"
          >
            <button
              class="dropdown-toggle nav-link-monospaced nav-link btn btn-unstyled"
              disabled=""
              title="Display Style"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-table"
                role="presentation"
              >
                <use
                  xlink:href="icons.svg#table"
                />
              </svg>
            </button>
          </div>
        </li>
        <li
          class="nav-item"
        >
          <div
            class="dropdown"
          >
            <button
              class="dropdown-toggle nav-btn nav-btn-monospaced navbar-breakpoint-down-d-none btn btn-primary"
              disabled=""
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-plus"
                role="presentation"
              >
                <use
                  xlink:href="icons.svg#plus"
                />
              </svg>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering renders a ManagementToolbar with filter and order 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav"
      >
        <div
          class="dropdown"
        >
          <button
            class="dropdown-toggle nav-link btn btn-unstyled"
            type="button"
          >
            <span
              class="navbar-breakpoint-down-d-none"
            >
              <span
                class="navbar-text-truncate"
              >
                Filter and Order
              </span>
              <svg
                class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after"
                role="presentation"
              >
                <use
                  xlink:href="icons.svg#caret-bottom"
                />
              </svg>
            </span>
            <span
              class="navbar-breakpoint-d-none"
            >
              <svg
                class="lexicon-icon lexicon-icon-filter"
                role="presentation"
              >
                <use
                  xlink:href="icons.svg#filter"
                />
              </svg>
            </span>
          </button>
        </div>
      </ul>
      <ul
        class="navbar-nav"
      />
    </div>
  </nav>
</div>
`;

exports[`BasicRendering renders a ManagementToolbar with info button 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav"
      />
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <button
            class="nav-link nav-link-monospaced btn btn-unstyled"
            title="Info"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-info-circle-open"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#info-circle-open"
              />
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering renders a ManagementToolbar with only search 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav"
      />
      <div
        class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <form
            method="get"
            role="search"
          >
            <div
              class="input-group"
            >
              <div
                class="input-group-item"
              >
                <input
                  aria-label="Search"
                  class="form-control input-group-inset input-group-inset-after"
                  type="text"
                  value=""
                />
                <span
                  class="input-group-inset-item input-group-inset-item-after"
                >
                  <button
                    class="navbar-breakpoint-d-none btn btn-monospaced btn-unstyled"
                    type="button"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-times"
                      role="presentation"
                    >
                      <use
                        xlink:href="icons.svg#times"
                      />
                    </svg>
                  </button>
                  <button
                    class="btn btn-monospaced btn-unstyled"
                    type="submit"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-search"
                      role="presentation"
                    >
                      <use
                        xlink:href="icons.svg#search"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item navbar-breakpoint-d-none"
        >
          <button
            class="nav-link nav-link-monospaced btn btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-search"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#search"
              />
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering renders a ManagementToolbar with selectable 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <div
            class="custom-control custom-checkbox"
          >
            <label>
              <input
                checked=""
                class="custom-control-input"
                type="checkbox"
                value="true"
              />
              <span
                class="custom-control-label"
              >
                <span
                  class="custom-control-label-text"
                >
                  Select Items
                </span>
              </span>
            </label>
          </div>
        </li>
      </ul>
      <ul
        class="navbar-nav"
      />
    </div>
  </nav>
</div>
`;

exports[`BasicRendering renders a ManagementToolbar with sorting order 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <button
            class="nav-link nav-link-monospaced order-arrow-up-active btn btn-unstyled"
            title="Reverse Sort Direction"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-order-arrow"
              role="presentation"
            >
              <use
                xlink:href="icons.svg#order-arrow"
              />
            </svg>
          </button>
        </li>
      </ul>
      <ul
        class="navbar-nav"
      />
    </div>
  </nav>
</div>
`;

exports[`BasicRendering renders a ManagementToolbar with view types 1`] = `
<div>
  <nav
    class="management-bar management-bar-light navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav"
      />
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <div
            class="dropdown"
          >
            <button
              class="dropdown-toggle nav-link-monospaced nav-link btn btn-unstyled"
              title="Display Style"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-table"
                role="presentation"
              >
                <use
                  xlink:href="icons.svg#table"
                />
              </svg>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;
